--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Something For Two</title>
+        <title>localit</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <link rel="shortcut icon" href="/favicon.ico">
@@ -11,6 +11,7 @@
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+        <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
@@ -29,14 +30,36 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/" style="font-size: 160%"><i class="fa fa-globe"></i> Something For Two</a>
+                <a class="navbar-brand" href="/" style="font-size: 160%"><i class="fa fa-globe"></i> localit</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav pull-right">
-                    <li><a href="#"><i class="fa fa-fw fa-book"></i> Activity</a></li>
-                    <li><a href="#"><i class="fa fa-fw fa-play-circle"></i> Time</a></li>
-                    <li><a href="#"><i class="fa fa-fw fa-archive"></i> Settings</a></li>
-                    <li><a href="#"><i class="fa fa-fw fa-envelope"></i> Logout</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-child"></i> Activity <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Any</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">Help</a></li>
+                            <li><a href="#">Entertainment</a></li>
+                            <li><a href="#">Food</a></li>
+                            <li><a href="#">Sightseeing</a></li>
+                            <li><a href="#">Just meet</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-calendar"></i> Time <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="#">Any</a></li>
+                            <li class="divider"></li>
+                            <li><a href="#">30min</a></li>
+                            <li><a href="#">1h</a></li>
+                            <li><a href="#">2h</a></li>
+                            <li><a href="#">5h</a></li>
+                            <li><a href="#">24h</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#"><i class="fa fa-fw fa-spin fa-cog"></i> Settings</a></li>
+                    <li><a href="#"><i class="fa fa-fw fa-sign-out"></i> Logout</a></li>
                 </ul>
             </div>
         </nav>
@@ -50,16 +73,6 @@
         <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
 
         <!-- build:js(.) scripts/plugins.js -->
         <script src="bower_components/bootstrap/js/affix.js"></script>
